--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-pivot": "^6.1.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
